implement search Product filtering by name and category