@@ -11,7 +11,7 @@ import org.springframework.boot.autoconfigure.SpringBootApplication;
 
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
-import java.util.Arrays;
+import java.util.List;
 
 @SpringBootApplication
 @RequiredArgsConstructor
@@ -32,24 +32,46 @@ public class StoreProjectApplication implements CommandLineRunner {
 	}
 
 	public void run(String... args) throws ParseException {
-		Category cat1 = new Category("Technology");
+		Category cat1 = new Category("Informatics");
 		Category cat2 = new Category("Office");
-		Category cat3 = new Category("Bathroom");
-		Category cat4 = new Category("Food");
-		Category cat5 = new Category("Pets");
-		Category cat6 = new Category("Clothes");
-		Category cat7 = new Category("Mats");
+		Category cat3 = new Category("House");
+		Category cat4 = new Category("Electronics");
+		Category cat5 = new Category("Gardening");
+		Category cat6 = new Category("Misc");
+		Category cat7 = new Category("Perfumes");
 
 		Product p1 = new Product("Computer", 2000);
 		Product p2 = new Product("Printer", 800);
 		Product p3 = new Product("Mouse", 80);
+		Product p4 = new Product("Desk", 80);
+		Product p5 = new Product("Towel", 80);
+		Product p6 = new Product("Mattress", 80);
+		Product p7 = new Product("TV", 80);
+		Product p8 = new Product("Mower", 80);
+		Product p9 = new Product("Nightlight", 80);
+		Product p11 = new Product("Necklace", 80);
+		Product p10 = new Product("Shampoo", 80);
 
-		cat1.getProducts().addAll(Arrays.asList(p1, p2, p3));
-		cat2.getProducts().add(p2);
 
-		p1.getCategories().add(cat1);
-		p2.getCategories().addAll(Arrays.asList(cat1, cat2));
-		p3.getCategories().add(cat1);
+		cat1.getProducts().addAll(List.of(p1, p2, p3));
+		cat2.getProducts().addAll(List.of(p2, p4));
+		cat3.getProducts().addAll(List.of(p5, p6));
+		cat4.getProducts().addAll(List.of(p1, p2, p3, p7));
+		cat5.getProducts().add(p8);
+		cat6.getProducts().addAll(List.of(p9, p10));
+		cat7.getProducts().add(p11);
+
+		p1.getCategories().addAll(List.of(cat1, cat4));
+		p2.getCategories().addAll(List.of(cat1, cat2, cat4));
+		p3.getCategories().addAll(List.of(cat1, cat4));
+		p4.getCategories().add(cat2);
+		p5.getCategories().add(cat3);
+		p6.getCategories().add(cat3);
+		p7.getCategories().add(cat4);
+		p8.getCategories().add(cat5);
+		p9.getCategories().add(cat6);
+		p10.getCategories().add(cat6);
+		p11.getCategories().add(cat7);
 
 		State st1 = new State("Florida");
 		State st2 = new State("Texas");
@@ -59,17 +81,21 @@ public class StoreProjectApplication implements CommandLineRunner {
 		City c3 = new City("Houston", st2);
 
 		st1.getCities().add(c1);
-		st2.getCities().addAll(Arrays.asList(c2, c3));
+		st2.getCities().add(c2);
+		st2.getCities().add(c3);
 
 		Client cli1 = new Client("Mary Jane", "mary@jane.com", "12332132", ClientType.PERSON);
 		Client cli2 = new Client("John Dilly", "johnny@mail.com", "12758492", ClientType.PERSON);
 
-		cli1.getPhoneNumbers().addAll(Arrays.asList("1234567890", "0987654321"));
+		cli1.getPhoneNumbers().add("1234567890");
+		cli1.getPhoneNumbers().add("0987654321");
+
 
 		Address e1 = new Address("Main Street", "300", "Apt 123", "51030450", cli1, c1);
 		Address e2 = new Address("Seen Street", "660", "", "99999999", cli1, c2);
 
-		cli1.getAddresses().addAll(Arrays.asList(e1, e2));
+		cli1.getAddresses().add(e1);
+		cli1.getAddresses().add(e2);
 
 
 		SimpleDateFormat sdf = new SimpleDateFormat("dd/MM/yyyy HH:mm");
@@ -82,28 +108,29 @@ public class StoreProjectApplication implements CommandLineRunner {
 		pur1.setPayment(pay1);
 		pur2.setPayment(pay2);
 
-		cli1.getPurchases().addAll(Arrays.asList(pur1, pur2));
+		cli1.getPurchases().addAll(List.of(pur1, pur2));
 
 		PurchaseItem pi1 = new PurchaseItem(pur1, p1, 0.00, 1, 2000.00);
 		PurchaseItem pi2 = new PurchaseItem(pur1, p3, 0.00, 2, 80.00);
 		PurchaseItem pi3 = new PurchaseItem(pur2, p2, 100.00, 1, 800.00);
 
-		pur1.getItems().addAll(Arrays.asList(pi1, pi2));
+		pur1.getItems().add(pi1);
+		pur1.getItems().add(pi2);
 		pur2.getItems().add(pi3);
 
 		p1.getItems().add(pi1);
 		p2.getItems().add(pi3);
 		p3.getItems().add(pi2);
 
-		categoryRepository.saveAll(Arrays.asList(cat1, cat2, cat3, cat4, cat5, cat6, cat7));
-		productRepository.saveAll(Arrays.asList(p1, p2, p3));
-		stateRepository.saveAll(Arrays.asList(st1, st2));
-		cityRepository.saveAll(Arrays.asList(c1, c2, c3));
-		clientRepository.saveAll(Arrays.asList(cli1, cli2));
-		addressRepository.saveAll(Arrays.asList(e1, e2));
-		purchaseRepository.saveAll((Arrays.asList(pur1, pur2)));
-		paymentRepository.saveAll(Arrays.asList(pay1, pay2));
-		purchaseItemRepository.saveAll(Arrays.asList(pi1, pi2, pi3));
+		categoryRepository.saveAll(List.of(cat1, cat2, cat3, cat4, cat5, cat6, cat7));
+		productRepository.saveAll(List.of(p1, p2, p3, p4, p5, p6, p7 ,p8, p9 ,p10, p11));
+		stateRepository.saveAll(List.of(st1, st2));
+		cityRepository.saveAll(List.of(c1, c2, c3));
+		clientRepository.saveAll(List.of(cli1, cli2));
+		addressRepository.saveAll(List.of(e1, e2));
+		purchaseRepository.saveAll((List.of(pur1, pur2)));
+		paymentRepository.saveAll(List.of(pay1, pay2));
+		purchaseItemRepository.saveAll(List.of(pi1, pi2, pi3));
 
 
 	}
